fix: config theme and scrollbar tailwind

--- a/apps/portfolio/src/app/[locale]/globals.css
+++ b/apps/portfolio/src/app/[locale]/globals.css
@@ -1,4 +1,5 @@
 @import "@repo/tailwind/styles.css";
+@plugin "tailwind-scrollbar";
 
 /**
  * This is necessary to load the @repo/ui package when moving from
@@ -12,4 +13,26 @@
 
 @theme inline {
   --font-sans: var(--font-inter-tight);
+}
+
+
+:root {
+  --background: 255 255 255;
+  --foreground: 0 0 0;
+}
+
+[data-theme="dark"] {
+  --background: 0 0 0;
+  --foreground: 255 255 255;
+}
+
+.dark {
+  --background: 0 0 0;
+  --foreground: 255 255 255;
+}
+
+/* FIX CHO IPHONE - Đảm bảo body và html có background color nhất quán */
+html {
+  background-color: rgb(var(--background));
+  color: rgb(var(--foreground));
 }
