--- a/toolings/tailwind/styles.css
+++ b/toolings/tailwind/styles.css
@@ -5,11 +5,3 @@
     @apply flex items-center justify-center;
   }
 }
-
-.no-scrollbar::-webkit-scrollbar {
-  display: none;
-}
-.no-scrollbar {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
